# hasu

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  asset-manifest.json  how-it-works.html  index.html  package-lock.json  package.json
migrations/: sqitch.plan
migrations/deploy/: add_sample_data.sql  cascade_delete_project_todos.sql  create_default_inbox_project.sql  create_hasu_todos_schema.sql  enable_realtime_for_hasu_tables.sql  fix_inbox_function_for_todo.sql  fix_todo_project_foreign_key.sql
migrations/revert/: add_sample_data.sql  enable_realtime_for_hasu_tables.sql  fix_todo_project_foreign_key.sql
migrations/verify/: add_sample_data.sql  create_hasu_todos_schema.sql  enable_realtime_for_hasu_tables.sql  fix_recursive_trigger.sql
public/: CNAME  index.html  material-icons.css
src/: App.css  App.js  index.css  index.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: devtools.json  window-management.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  session_store.rs
src/components/: AddProjectModal.js  AddTaskModal.css  AddTaskModal.js  Auth.js  LandingShowcase.js  ProjectList.css  ProjectList.js  QuickAdd.js  SliderCard.js  ThemeToggle.js  TodoItem.js  TodoList.css  TodoList.js
src/contexts/: AuthContext.js  ThemeContext.js
src/lib/: sampleData.js  supabase.js  supakeyIntegration.js  widgetHelper.js
static/css/: main.2e35f21e.css  main.2e35f21e.css.map  main.8a159fb7.css  main.8a159fb7.css.map  main.d16d1c06.css  main.d16d1c06.css.map
static/js/: 133.bfa73198.chunk.js  main.48500e44.js  (+14 more)
(+13 files in other folders)
